--- a/cv.tex
+++ b/cv.tex
@@ -21,15 +21,27 @@
 %-------------------------
 \begin{center}
     {\Large \textbf{Xufeng Duan}}\\[6pt]
-    \href{mailto:xufeng.duan@link.cuhk.edu.hk}{Email} \quad  {\href{https://scholar.google.com/citations?user=W-MI5XUAAAAJ}{Google Scholar}} \quad 
+    \href{mailto:xufengduan@cuhk.edu.hk}{Email} \quad  {\href{https://scholar.google.com/citations?user=W-MI5XUAAAAJ}{Google Scholar}} \quad 
     \href{https://xufengduan.github.io/}{Personal Website}\\
 \textbf{Research interests:} Psycholinguistics, Neurolinguistics, Mechanistic Interpretability
 \end{center}
 
 %-------------------------
+% Working Experience
+%-------------------------
+\section*{Working Experience}
+\vspace{-.5em}
+\hrule
+\vspace{0.3ex}
+\hrule
+
+\textbf{The Chinese University of Hong Kong} \hfill 2025--Present\\
+Brain and Mind Institute \hfill \textit{Research Assistant Professor}
+
+%-------------------------
 % Education
 %-------------------------
-\vspace{-2.5em} 
+\vspace{-1.5em} 
 \section*{Education}
 \vspace{-.5em} 
 \hrule
@@ -46,18 +58,6 @@ Department of Linguistics and Modern Languages \hfill \textit{M.A.} in Linguisti
 
 \textbf{Sun Yat-sen University} \hfill 2015--2019\\
 Neurolinguistics Laboratory \hfill \textit{B.A.} in Chinese
-%-------------------------
-% Working Experience
-%-------------------------
-\vspace{-1.5em} 
-\section*{Working Experience}
-\vspace{-.5em}
-\hrule
-\vspace{0.3ex}
-\hrule
-
-\textbf{The Chinese University of Hong Kong (CUHK)} \hfill 2025--Present\\
-Brain and Mind Institute, Language Processing Lab \hfill \textit{Research Assistant Professor}
 
 %-------------------------
 % Research Projects
@@ -85,10 +85,12 @@ Brain and Mind Institute, Language Processing Lab \hfill \textit{Research Assist
 \vspace{0.3ex}
 \hrule
 
+\hangindent=1.5em \hangafter=1 Tang, X., \textbf{Duan, X.}, \& Cai, Z. G. (2025). Large Language Models for Automated Literature Review: An Evaluation of Reference Generation, Abstract Writing, and Review Composition. \textit{In Proceedings of the 2025 Conference on Empirical Methods in Natural Language Processing (EMNLP), Main Conference}. \href{https://doi.org/10.48550/arXiv.2412.13612}{arXiv:2412.13612}
+
 \hangindent=1.5em \hangafter=1 \textbf{Duan, X.}, Yao, Z., Zhang, Y., Wang, S., \& Cai, Z. G. (2025). How syntax specialization emerges in language models. \textit{arXiv preprint}. \href{https://doi.org/10.48550/arXiv.2505.19548}{
 doi:10.48550/arXiv.2505.19548}
 
-\hangindent=1.5em \hangafter=1 Xiao, B., \textbf{Duan, X.}, Haslett, D. A., \& Cai, Z. G. (in press). Human-likeness of LLMs in the Mental Lexicon. \textit{Conference on Computational Natural Language Learning}.
+\hangindent=1.5em \hangafter=1 Xiao, B., \textbf{Duan, X.}, Haslett, D. A., \& Cai, Z. G. (2025). Human-likeness of LLMs in the Mental Lexicon. \textit{Proceedings of the 29th Conference on Computational Natural Language Learning} (pp. 586–601). Vienna, Austria: Association for Computational Linguistics. \href{https://aclanthology.org/2025.conll-1.38/}{2025.conll-1.38}
 
 \hangindent=1.5em \hangafter=1 Qiu, Z., \textbf{Duan, X.}, \& Cai, Z. G. (2025). Grammaticality representation in ChatGPT as compared to linguists and laypeople. \textit{Humanities and Social Sciences Communications}, 12(1), 1–15. \\
 \href{https://doi.org/10.1057/s41599-025-04907-8}{doi:10.1057/s41599-025-04907-8}
@@ -102,8 +104,6 @@ doi:10.48550/arXiv.2505.19548}
 \hangindent=1.5em \hangafter=1 \textbf{Duan, X.}, Zhou, X., Xiao, B., \& Cai, Z. (2025). Unveiling language competence neurons: A psycholinguistic approach to model interpretability. In O. Rambow, L. Wanner, M. Apidianaki, H. Al-Khalifa, B. D. Eugenio, \& S. Schockaert (Eds.), \textit{Proceedings of the 31st International Conference on Computational Linguistics} (pp. 10148–10157). Association for Computational Linguistics. \href{https://aclanthology.org/2025.coling-main.677/}{https://aclanthology.org/2025.coling-main.677}
 
 \hangindent=1.5em \hangafter=1 Zhou, X., Chen, D., Cahyawijaya, S., \textbf{Duan, X.}, \& Cai, Z. G. (2025). Linguistic Minimal Pairs Elicit Linguistic Similarity in Large Language Models. \textit{Proceedings of the 31st International Conference on Computational Linguistics} (pp. 6866–6888). Association for Computational Linguistics. \href{https://aclanthology.org/2025.coling-main.459/}{https://aclanthology.org/2025.coling-main.459}
-
-\hangindent=1.5em \hangafter=1 Tang, X., \textbf{Duan, X.}, \& Cai, Z. G. (2025). Large Language Models for Automated Literature Review: An Evaluation of Reference Generation, Abstract Writing, and Review Composition. \textit{In Proceedings of the 2025 Conference on Empirical Methods in Natural Language Processing (EMNLP), Main Conference}. \href{https://doi.org/10.48550/arXiv.2412.13612}{arXiv:2412.13612}
 
 \hangindent=1.5em \hangafter=1 *Wang, S., \textbf{*Duan, X.}, \& Cai, Z. (2024). A Multimodal Large Language Model “Foresees” Objects Based on Verb Information but Not Gender. \textit{Proceedings of the 28th Conference on Computational Natural Language Learning} (pp. 435–441). \href{https://doi.org/10.18653/v1/2024.conll-1.32}{doi:10.18653/v1/2024.conll-1.32}
 
