--- a/publications.bib
+++ b/publications.bib
@@ -20,7 +20,7 @@
 
 @article{duan2025stimmas,
   title   = {StimMAS: A Multi-Agent Framework for Automated Linguistic Stimulus Construction in Psychological Research},
-  author  = {Duan, Xufeng and Xiao, Bosi and Kan, Bingru and Cai, Zhenguang G},
+  author  = {Duan, Xufeng and Xiao, Bei and Kan, Beijia and Cai, Zhenguang},
   journal = {PsyArXiv preprint},
   year    = {2025},
   doi     = {10.31234/osf.io/83zev_v1}
@@ -28,7 +28,7 @@
 
 @inproceedings{tang2025llm,
   title     = {Large Language Models for Automated Literature Review: An Evaluation of Reference Generation, Abstract Writing, and Review Composition},
-  author    = {Tang, Xieling and Duan, Xufeng and Cai, Zhenguang G},
+  author    = {Tang, Xuemei and Duan, Xufeng and Cai, Zhenguang},
   booktitle = {Proceedings of the 2025 Conference on Empirical Methods in Natural Language Processing (EMNLP), Main Conference},
   year      = {2025},
   journal   = {arXiv preprint arXiv:2412.13612}
@@ -44,7 +44,7 @@
 
 @article{zhao2025missing,
   title   = {The missing half of language learning in current developmental language models: Exogenous and endogenous linguistic input},
-  author  = {Zhao, Nan and Duan, Xufeng and Cai, Zhenguang G},
+  author  = {Zhao, Nan and Duan, Xufeng and Cai, Zhenguang},
   journal = {Open Mind},
   year    = {2025},
   note    = {in press}
@@ -52,21 +52,21 @@
 
 @article{duan2025syntax,
   title   = {How syntax specialization emerges in language models},
-  author  = {Duan, Xufeng and Yao, Zhuoyang and Zhang, Yichi and Wang, Shuqi and Cai, Zhenguang G},
+  author  = {Duan, Xufeng and Yao, Zhaoqian and Zhang, Yunhao and Wang, Shaonan and Cai, Zhenguang},
   journal = {arXiv preprint arXiv:2505.19548},
   year    = {2025}
 }
 
 @article{lin2025information,
   title   = {Information Loss in LLMs' Multilingual Translation: The Role of Training Data, Language Proximity, and Language Family},
-  author  = {Lin, Yuxuan and Duan, Xufeng and Haslett, David and Chen, Yuxiang and Cai, Zhenguang G},
+  author  = {Lin, Yumeng and Duan, Xufeng and Haslett, David and Chen, Yige and Cai, Zhenguang},
   journal = {arXiv preprint arXiv:2506.23340},
   year    = {2025}
 }
 
 @inproceedings{xiao2025humanlikeness,
   title     = {Human-likeness of LLMs in the Mental Lexicon},
-  author    = {Xiao, Bosi and Duan, Xufeng and Haslett, David A and Cai, Zhenguang G},
+  author    = {Xiao, Bei and Duan, Xufeng and Haslett, David A and Cai, Zhenguang},
   booktitle = {Proceedings of the 29th Conference on Computational Natural Language Learning},
   pages     = {586--601},
   year      = {2025},
@@ -77,7 +77,7 @@
 
 @article{qiu2025grammaticality,
   title   = {Grammaticality representation in ChatGPT as compared to linguists and laypeople},
-  author  = {Qiu, Zhuang and Duan, Xufeng and Cai, Zhenguang G},
+  author  = {Qiu, Zhuang and Duan, Xufeng and Cai, Zhenguang},
   journal = {Humanities and Social Sciences Communications},
   volume  = {12},
   number  = {1},
@@ -108,7 +108,7 @@
 
 @article{duan2025macbehaviour,
   title   = {MacBehaviour: An R package for behavioural experimentation on large language models},
-  author  = {Duan, Xufeng and Li, Shixuan and Cai, Zhenguang G},
+  author  = {Duan, Xufeng and Li, Shixuan and Cai, Zhenguang},
   journal = {Behavior Research Methods},
   volume  = {57},
   number  = {1},
@@ -119,7 +119,7 @@
 
 @inproceedings{duan2025unveiling,
   title     = {Unveiling language competence neurons: A psycholinguistic approach to model interpretability},
-  author    = {Duan, Xufeng and Zhou, Xudong and Xiao, Bosi and Cai, Zhenguang},
+  author    = {Duan, Xufeng and Zhou, Xinyu and Xiao, Bei and Cai, Zhenguang},
   booktitle = {Proceedings of the 31st International Conference on Computational Linguistics},
   pages     = {10148--10157},
   year      = {2025},
@@ -129,7 +129,7 @@
 
 @inproceedings{zhou2025linguistic,
   title     = {Linguistic Minimal Pairs Elicit Linguistic Similarity in Large Language Models},
-  author    = {Zhou, Xudong and Chen, Duyu and Cahyawijaya, Samuel and Duan, Xufeng and Cai, Zhenguang G},
+  author    = {Zhou, Xinyu and Chen, Delong and Cahyawijaya, Samuel and Duan, Xufeng and Cai, Zhenguang},
   booktitle = {Proceedings of the 31st International Conference on Computational Linguistics},
   pages     = {6866--6888},
   year      = {2025},
@@ -158,14 +158,14 @@
 
 @article{duan2024hlb,
   title   = {HLB: Benchmarking LLMs' Humanlikeness in Language Use},
-  author  = {Duan, Xufeng and Xiao, Bosi and Tang, Xieling and Cai, Zhenguang G},
+  author  = {Duan, Xufeng and Xiao, Bei and Tang, Xuemei and Cai, Zhenguang},
   journal = {arXiv preprint arXiv:2409.15890},
   year    = {2024}
 }
 
 @incollection{duan2024chinese,
   title     = {Chinese Character Processing},
-  author    = {Duan, Xufeng and Cai, Zhenguang G},
+  author    = {Duan, Xufeng and Cai, Zhenguang},
   booktitle = {Oxford Research Encyclopedia of Linguistics},
   year      = {2024},
   publisher = {Oxford University Press},
@@ -174,7 +174,7 @@
 
 @article{wu2024speaker,
   title   = {Speaker Demographics Modulate Listeners' Neural Correlates of Spoken Word Processing},
-  author  = {Wu, Hanlin and Duan, Xufeng and Cai, Zhenguang G},
+  author  = {Wu, Hanlin and Duan, Xufeng and Cai, Zhenguang},
   journal = {Journal of Cognitive Neuroscience},
   volume  = {36},
   number  = {10},
@@ -203,7 +203,7 @@
 
 @article{lu2021prominence,
   title   = {Prominence and Locality Principle in Chinese Possessive Topicalization Sentences and its Psychological Basis: Evidence from eye-movements},
-  author  = {Lu, Shuang and Duan, Xufeng and Li, Xingshan},
+  author  = {Lu, Shuo and Duan, Xufeng and Li, Xiangyu},
   journal = {Contemporary Linguistics},
   volume  = {23},
   number  = {1},
