--- a/publications.bib
+++ b/publications.bib
@@ -10,6 +10,16 @@
 %
 % You can still manually specify doi/url if needed.
 % ============================================================
+@article{202601.1663,
+  doi       = {10.20944/preprints202601.1663.v1},
+  url       = {https://doi.org/10.20944/preprints202601.1663.v1},
+  year      = 2026,
+  month     = {January},
+  publisher = {Preprints},
+  author    = {Hengyuan Zhang and Zhihao Zhang and Mingyang Wang and Zunhai Su and Yiwei Wang and Qianli Wang and Shuzhou Yuan and Ercong Nie and Xufeng Duan and Qibo Xue and Zeping Yu and Chenming Shang and Xiao Liang and Jing Xiong and Hui Shen and Chaofan Tao and Zhengwu Liu and Senjie Jin and Zhiheng Xi and Dongdong Zhang and Sophia Ananiadou and Tao Gui and Ruobing Xie and Hayden Kwok-Hay So and Hinrich Schütze and Xuanjing Huang and Qi Zhang and Ngai Wong},
+  title     = {Locate, Steer, and Improve: A Practical Survey of Actionable Mechanistic Interpretability in Large Language Models},
+  journal   = {Preprints}
+}
 
 @article{fu2026scalpel,
   title   = {SCALPEL: Selective Capability Ablation via Low-rank Parameter Editing for Large Language Model Interpretability Analysis},
